--- a/.env.example
+++ b/.env.example
@@ -63,4 +63,23 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+REDIS_URL=null
+SESSION_CONNECTION=file
+SESSION_STORE=null
+SESSION_DOMAIN=localhost
+SESSION_SECURE_COOKIE=false
+DB_QUEUE_CONNECTION=mysql
+MAIL_LOG_CHANNEL=stack
+LOG_STDERR_FORMATTER=null
+PAPERTRAIL_URL=null
+PAPERTRAIL_PORT=null
+RESEND_KEY=null
+SLACK_BOT_USER_OAUTH_TOKEN=null
+SLACK_BOT_USER_DEFAULT_CHANNEL=null
+POSTMARK_MESSAGE_STREAM_ID=null
+POSTMARK_TOKEN=null
+SQS_SUFFIX=null
+
 VITE_APP_NAME="${APP_NAME}"
