--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
+# ----------------------------------------
+# APP Settings
+# ----------------------------------------
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=            # Generate with: php artisan key:generate --show
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -9,77 +12,112 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
-PHP_CLI_SERVER_WORKERS=4
-
-BCRYPT_ROUNDS=12
-
+# ----------------------------------------
+# Logging
+# ----------------------------------------
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# ----------------------------------------
+# Database (Local: SQLite example)
+# ----------------------------------------
 DB_CONNECTION=sqlite
+# Uncomment and fill below for local MySQL
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+# ----------------------------------------
+# Database (Railway / Production)
+# ----------------------------------------
+# DB_CONNECTION=mysql
+# DB_HOST=gondola.proxy.rlwy.net
+# DB_PORT=34520
+# DB_DATABASE=railway
+# DB_USERNAME=root
+# DB_PASSWORD=your_railway_password
+
+# ----------------------------------------
+# Cache & Session
+# ----------------------------------------
+CACHE_STORE=database
+CACHE_PREFIX=laravel_cache_
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
+SESSION_SECURE_COOKIE=false
 
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+# ----------------------------------------
+# Queue & Broadcast
+# ----------------------------------------
 QUEUE_CONNECTION=database
+BROADCAST_CONNECTION=log
 
-CACHE_STORE=database
-CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
-
+# ----------------------------------------
+# Redis
+# ----------------------------------------
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_URL=null
 
+# ----------------------------------------
+# Mail (example using log driver)
+# ----------------------------------------
 MAIL_MAILER=log
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS=hello@example.com
 MAIL_FROM_NAME="${APP_NAME}"
 
+# ----------------------------------------
+# AWS (optional, set if menggunakan S3 atau lainnya)
+# ----------------------------------------
 AWS_ACCESS_KEY_ID=null
 AWS_SECRET_ACCESS_KEY=null
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+AWS_URL=
+AWS_ENDPOINT=
 
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-REDIS_URL=null
-SESSION_CONNECTION=file
-SESSION_STORE=null
-SESSION_DOMAIN=localhost
-SESSION_SECURE_COOKIE=false
-DB_QUEUE_CONNECTION=mysql
-MAIL_LOG_CHANNEL=stack
-LOG_STDERR_FORMATTER=null
+# ----------------------------------------
+# Papertrail (optional logging service)
+# ----------------------------------------
 PAPERTRAIL_URL=null
 PAPERTRAIL_PORT=null
-RESEND_KEY=null
+LOG_STDERR_FORMATTER=null
+
+# ----------------------------------------
+# Slack (optional)
+# ----------------------------------------
 SLACK_BOT_USER_OAUTH_TOKEN=null
 SLACK_BOT_USER_DEFAULT_CHANNEL=null
-POSTMARK_MESSAGE_STREAM_ID=null
+
+# ----------------------------------------
+# Postmark (optional mail service)
+# ----------------------------------------
 POSTMARK_TOKEN=null
+POSTMARK_MESSAGE_STREAM_ID=null
+
+# ----------------------------------------
+# Other services (optional)
+# ----------------------------------------
+RESEND_KEY=null
 SQS_SUFFIX=null
 
+# ----------------------------------------
+# Vite (for frontend assets)
+# ----------------------------------------
 VITE_APP_NAME="${APP_NAME}"
